Resolved dependency errors

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>djng</title>
+    <title>Keen Demo App</title>
     <meta name="description" content="">
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
